# plotters-iced2

./: Cargo.toml  README.md
.github/workflows/: test.yml
examples/: cpu-monitor.rs  large-data.rs  mouse_events.rs
examples/split-chart/: Cargo.toml
examples/split-chart/src/: main.rs
src/: chart.rs  renderer.rs  utils.rs  widget.rs
src/backend/: mod.rs
src/sample/: lttb.rs
