[package]
name = "plotters-iced2"
version = "0.14.0"
description = "Iced backend for Plotters"
readme = "README.md"
license = "MIT"
edition = "2024"
resolver = "2"
homepage = "https://github.com/GyulyVGC/plotters-iced2"
repository = "https://github.com/GyulyVGC/plotters-iced2.git"
documentation = "https://docs.rs/crate/plotters-iced2/"
keywords = ["plotters", "chart", "plot", "iced", "backend"]
categories = ["visualization"]
authors = ["Giuliano Bellini <gyulyvgc99@gmail.com>"]

[workspace]
members = [".", "examples/split-chart"]

[dependencies]
plotters = { version = "0.3", default-features = false }
plotters-backend = "0.3"
iced_widget = { version = "0.14", features = ["canvas"] }
iced_graphics = "0.14"
once_cell = "1"

[dev-dependencies]
plotters = { version = "0.3", default-features = false, features = [
    "chrono",
    "area_series",
    "line_series",
    "point_series",
] }
iced = { version = "0.14", features = ["canvas", "tokio"] }
chrono = { version = "0.4", default-features = false }
rand = "0.9"
tokio = { version = "1", features = ["rt"], default-features = false }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
sysinfo = { version = "0.37", default-features = false, features = ["system"] }
