[package]
name = "split-chart"
version = "0.1.0"
authors = ["Giuliano Bellini <gyulyvgc99@gmail.com>"]
edition = "2021"
publish = false

[dependencies]
iced = { version = "0.14", features = ["canvas", "fira-sans"] }
plotters-iced2 = { path = "../../" }
plotters = { version = "0.3", default-features = false, features = [
    "chrono",
    "area_series",
    "line_series",
    "point_series",
] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
iced.version = "0.14"
iced.features = ["canvas", "debug", "webgl", "fira-sans"]

console_error_panic_hook = "0.1"
console_log = "1.0"
